# OmniStream

./: .gitignore  CLAUDE.md  README.md  test.txt
dashboard/: SETUP.md
etl/: config.example.json  pyproject.toml
etl/src/: db.py  load.py  models.py  normalize.py  pipeline.py  schema.sql
etl/src/parsers/: amazon.py  deezer.py  soundcloud.py  spotify.py  youtube.py
etl/tests/: test_load.py  test_normalize.py  test_parsers.py
etl/tests/fixtures/: Streaming_History_Audio_0.json  watch-history.json
