[project]
name = "omnistream-etl"
version = "0.1.0"
description = "ETL pipeline for OmniStream - unified music listening history"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0",
    "rapidfuzz>=3.0",
    "musicbrainzngs>=0.7",
    "pydantic>=2.0",
    "requests>=2.31",
    "unidecode>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
